follow on all, likes issue

--- a/us/static/style.css
+++ b/us/static/style.css
@@ -112,6 +112,52 @@
     width: 120px;
     height: 120px;
 }
+.followbutton {
+    background-color: #fff;
+    border: 1px solid #0077b5;
+    padding: 5px;
+    position: relative;
+    width: 6em;
+    height: 2em;
+    transition: 0.5s;
+    font-size: 17px;
+    border-radius: 0.4em;
+}
+
+.followbutton p {
+    position: absolute;
+    top: 0.4em;
+    left: 1.2em;
+    margin: 0;
+    padding: 0;
+    transition: .5s;
+    color: #0077b5;
+}
+
+.followbutton i {
+    position: absolute;
+    top: 0.45em;
+    right: 0.5em;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    transition: 0.5s;
+    height: 1em;
+    fill: #fff
+}
+
+.followbutton:hover p {
+    left: 0.6em;
+    color: #fff
+}
+
+.followbutton:hover i {
+    opacity: 1;
+}
+
+.followbutton:hover {
+    background-color: #0077b5;
+}
 @media (max-width: 991.98px) {
     .player-feeds{
         height: 100%;
