--- a/us/template/index.html
+++ b/us/template/index.html
@@ -659,7 +659,7 @@
             <div class="">
                 <div class="d-flex justify-content-center">
                     <div class="">
-                        <img class="rounded-circle img-width" src={{user.img.url}} alt="">
+                        <img class="rounded-circle img-width" src={{user.img.url}} alt="Player">
                     </div>
                 </div>
                 <div class="text-center">
