--- a/us/template/ScoutHome.html
+++ b/us/template/ScoutHome.html
@@ -117,7 +117,12 @@
                         class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i
                         class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
             </div>
-            
+            <div class="d-flex justify-content-center">
+                <button class="followbutton p-4" data-follow-id="{{ scout.id }}">
+                    <p class="">Follow</p>
+                    <i class="bi bi-person-fill-add text-white"></i>
+                </button>
+            </div>
         </div>
     </div>
     <div class="col-lg-5 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
@@ -242,7 +247,7 @@
         <div class="m-3 p-5 rounded player-recomendation bg-white shadow-lg">
             <div>
                 <p class="fw-bold">Recommended Clubs</p>
-                {% for clubs in club %}
+                {% for clubs in clubdata %}
 
                 <a class="text-decoration-none text-dark" href="{% url 'clubHome' clubs.id %}">
                     <div class="d-flex">
@@ -338,7 +343,7 @@
                     likesCountElement.text(data.likes_count + " likes");
 
                     // Toggle between the two icons
-                    if (likeButton.html().includes("text-danger")) {
+                    if (data["message"]=="liked") {
                         likeButton.html('<i class="bi bi-heart fs-5"></i>');
                     } else {
                         likeButton.html('<i class="bi bi-heart-fill fs-5 text-danger"></i>');
@@ -348,6 +353,66 @@
                     console.error(xhr.responseText);
                 }
             });
+        });
+        $(".followbutton").click(function () {
+            var FollowId = $(this).data("follow-id");
+            var followButton = $(this);
+            var text=$(".not-followed")
+            var icon=$(".not-followed-icon")
+            var headers = {
+                "X-CSRFToken": getCSRFToken()
+            };
+            $.ajax({
+                type: "POST",
+                headers: {
+                    "X-CSRFToken": getCSRFToken()
+                },
+                url: "{% url 'following' 0 %}".replace('0', FollowId),
+                dataType:"json",
+                success: function (data) {
+                    
+                    if (data['message']=="unfollowed") {
+                        // User has already liked the feed, display the liked icon
+                        followButton.html('<p class="">Follow</p><i class="bi bi-person-fill-add text-white"></i>');
+                        
+                    } else {
+                        // User has not liked the feed, display the regular like icon
+                        followButton.html('<p class="">Unfollow</p><i class="bi bi-person-fill-dash text-white"></i>');
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                }
+            });
+        });
+        $(".followbutton").each(function () {
+            var FollowId = $(this).data("follow-id");
+            var followButton = $(this);
+            var headers = {
+                "X-CSRFToken": getCSRFToken()
+            };
+            $.ajax({
+                type: "GET",
+                headers: {
+                    "X-CSRFToken": getCSRFToken()
+                },
+                url: "{% url 'is_following' 0 %}".replace('0', FollowId),
+                success: function (data) {
+                    if (data.is_following) {
+                        // User has already liked the feed, display the liked icon
+                        followButton.html('<p class="">Unfollow</p><i class="bi bi-person-fill-dash text-white"></i>');
+                        
+                    } else {
+                        // User has not liked the feed, display the regular like icon
+                        
+                        followButton.html('<p class="">Follow</p><i class="bi bi-person-fill-add text-white"></i>');
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                }
+            });
+
         });
     });
 </script>
