following and feeds completed

--- a/us/template/FollowingFeeds.html
+++ b/us/template/FollowingFeeds.html
@@ -35,7 +35,7 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page" href="{% url 'ScoutClub' %}">Clubs</a>
@@ -45,7 +45,7 @@
                                 href="{% url 'ScoutPlayer' %}">Players</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
+                            <a class="nav-link text-white" aria-current="page"
                                 href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
                     </ul>
@@ -53,6 +53,52 @@
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
                         <p class="text-light "><i class="bi bi-binoculars-fill"></i> {{user.first_name}}</p>
+                    </div>
+                    <a class="d-flex flex-column justify-content-center text-decoration-none"
+                        href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    {% elif user.is_player %}
+    <nav class="navbar player-navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
+                <p class="text-white">Urban</p>
+                <p class="text-warning">Scout</p>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="ms-3 d-flex w-50">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <button class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></button>
+                </div>
+                <div class="ms-3">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'PlayerScout' %}">Scouts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'player-club' %}">Clubs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="d-flex w-100 justify-content-start justify-content-sm-end">
+                    <div class="border rounded p-2 pb-0 mt-2 ms-3">
+                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -79,7 +125,7 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
@@ -90,7 +136,7 @@
                                 href="{% url 'ClubPlayer' %}">Players</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
+                            <a class="nav-link text-white" aria-current="page"
                                 href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
                     </ul>
@@ -106,118 +152,58 @@
         </div>
     </nav>
     {% endif %}
-    {% for i in player %}
     <div class="d-flex flex-wrap justify-content-center mt-4">
-        <div class="col-lg-3 h-50 col-12 m-3 p-5 rounded bg-white shadow-lg position-sticky">
-            <div class="">
-                <div class="d-flex justify-content-center">
-                    <div class="">
-                        <img class="rounded-circle img-width" src={{i.img.url}} alt="">
-                    </div>
-                </div>
-                <div class="text-center">
-                    <p class="text-dark mt-2 fs-4 fw-bold">{{i.first_name}} {{i.last_name}}</p>
-                    <p id="age" class="text-secondary"></p>
-                    <script>
-                        var playerDobString = "{{ i.player_dob }}";
-                        console.log(playerDobString);
-
-                        var dobParts;
-                        var year, month, day;
-
-                        if (playerDobString.includes(',')) {
-                            // Format: Oct. 17, 2001
-                            var months = {
-                                'Jan.': 0, 'Feb.': 1, 'March': 2, 'Apr.': 3, 'May': 4, 'June': 5,
-                                'Jul.': 6, 'Aug.': 7, 'Sept.': 8, 'Oct.': 9, 'Nov.': 10, 'Dec.': 11
-                            };
-
-                            dobParts = playerDobString.split(' ');
-                            month = months[dobParts[0]];
-                            day = parseInt(dobParts[1].replace(',', ''));
-                            year = parseInt(dobParts[2]);
-                        } else {
-                            // Format: 2001-10-17
-                            dobParts = playerDobString.split('-');
-                            year = parseInt(dobParts[0]);
-                            month = parseInt(dobParts[1]) - 1; // Months are 0-indexed in JavaScript
-                            day = parseInt(dobParts[2]);
-                        }
-
-                        // Create a Date object from the parsed parts
-                        var playerDate = new Date(year, month, day);
-                        console.log(playerDate)
-                        // Calculate the age based on player's date of birth
-                        var today = new Date();
-                        var age = today.getFullYear() - playerDate.getFullYear() - (today.getMonth() < playerDate.getMonth() || (today.getMonth() === playerDate.getMonth() && today.getDate() < playerDate.getDate()) ? 1 : 0);
-
-                        // You can now use the 'age' variable for your JavaScript logic
-                        console.log("Player's age is: " + age);
-                        document.getElementById("age").textContent = "Age: " + age;
-                    </script>
-
-                    <p class="text-secondary">Position: {{i.player_pos}}</p>
-                    <p class="text-secondary">District: {{i.district}}</p>
-                    <p class="text-secondary">Locality: {{i.locality}}</p>
-                </div>
-                <div>
-                    <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
-                        {% if j < ability %} <i class="bi bi-star-fill text-warning"></i>
-                            {% else %}
-                            <i class="bi bi-star text-warning"></i>
-                            {% endif %}
-                            {% endfor %}
-                            {% endwith %}
-                    </p>
-                    <p>Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
-                        {% if j < potential %} <i class="bi bi-star-fill text-warning"></i>
-                            {% else %}
-                            <i class="bi bi-star text-warning"></i>
-                            {% endif %}
-                            {% endfor %}
-                            {% endwith %}
-                    </p>
-                    {% if i.scouted_by != '' %}
-                    <p class="fw-bold">Scouted By {{i.scouted_by}} <i class="bi bi-patch-check-fill text-primary"></i>
-                    </p>
-                    {% endif %}
-                    <div class="d-flex justify-content-center">
-                        <button class="followbutton p-4" data-follow-id="{{ i.id }}">
-                            <p class="">Follow</p>
-                            <i class="bi bi-person-fill-add text-white"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-5 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
-
+        
+        <div class="col-lg-8 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
+            <div><p class="h4 text-secondary">New Posts</p></div>
             {% for j in feeds %}
             <div class="mt-4 border-top pt-4">
                 <div class="d-flex">
                     <div class="feed-img">
-                        <img class="w-100 rounded-circle" src={{i.img.url}} alt="">
+                        <img class="w-100 rounded-circle" src={{j.user.img.url}} alt="">
                     </div>
                     <div class="ms-2 d-flex">
+                        {% if j.user.is_club %}
                         <p class="fw-bold">
-                            {{i.first_name}} {{i.last_name}}
+                            {{j.user.club_name}}
                         </p>
+                        {% else %}
+                        <p class="fw-bold">
+                            {{j.user.first_name}} {{j.user.last_name}}
+                        </p>
+                        {% endif %}
                         <p class="ms-2 text-secondary">{{j.datetime}}</p>
                     </div>
                 </div>
                 <div class="w-100 mt-3">
                     {% if j.video.url != '' %}
-                    <video class="w-100" controls>
+                    <video class="w-100" controls loading="lazy">
                         <source src="{{ j.video.url }}" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <p class="fw-bold mt-3">{{i.first_name}} {{i.last_name}}
+                    <p class="fw-bold mt-3">{% if j.user.is_club %}
+                        <p class="fw-bold">
+                            {{j.user.club_name}}
+                        </p>
+                        {% else %}
+                        <p class="fw-bold">
+                            {{j.user.first_name}} {{j.user.last_name}}
+                        </p>
+                        {% endif %}
                         {% endif %}
                         {% if j.img.url != '' %}
                     <div class="w-100 mt-3">
-                        <img class="w-100" src="{{j.img.url}}" alt="">
+                        <img class="w-100" src="{{j.img.url}}" alt="" loading="lazy">
                     </div>
-                    <p class="fw-bold mt-3">{{i.first_name}} {{i.last_name}}
+                    <p class="fw-bold mt-3">{% if j.user.is_club %}
+                        <p class="fw-bold">
+                            {{j.user.club_name}}
+                        </p>
+                        {% else %}
+                        <p class="fw-bold">
+                            {{j.user.first_name}} {{j.user.last_name}}
+                        </p>
+                        {% endif %}
                         {% endif %}
                 </div>
                 <div class="">
@@ -237,95 +223,7 @@
 
 
         </div>
-        {% endfor %}
-        {% if user.is_scout %}
-        <div class="col-lg-3 col-12">
-            <div class="m-3 p-5  player-recomendation rounded bg-white shadow-lg">
-                <div>
-                    <p class="fw-bold">Recommended Players</p>
-                    {% for Players in playerdata %}
-
-                    <a class="text-decoration-none text-dark" href="{% url 'player-home' Players.id %}">
-                        <div class="d-flex">
-                            <div class="rec-img-club">
-                                <img class="w-100 rounded-circle" src="{{Players.img.url}}" alt="">
-                            </div>
-                            <p class="ms-2">{{Players.first_name}} {{Players.last_name}}{% if Players.scouted_by != ''%}
-                                <i class="bi bi-patch-check-fill text-primary"></i>
-                                {% endif %}
-                            </p>
-                            </p>
-                        </div>
-                    </a>
-                    {% endfor %}
-
-
-                </div>
-            </div>
-            <div class="m-3 p-5  player-recomendation rounded bg-white shadow-lg">
-                <div>
-                    <p class="fw-bold">Recommended Clubs</p>
-                    {% for clubs in clubdata %}
-                    {% if clubs.is_staff == 0 %}
-                    <a class="text-decoration-none text-dark" href="{% url 'clubHome' clubs.id %}">
-                        <div class="d-flex">
-                            <div class="rec-img-club">
-                                <img class="w-100 rounded-circle" src="{{clubs.img.url}}" alt="">
-                            </div>
-                            <p class="ms-2">{{clubs.club_name}} <i
-                                    class="bi bi-patch-check-fill text-primary"></i></p>
-                        </div>
-                    </a>
-                    {% endif %}
-                    {% endfor %}
-
-                </div>
-            </div>
-        </div>
-        {% else %}
-        <div class="col-lg-3 col-12">
-            <div class="m-3 p-5  player-recomendation rounded bg-white shadow-lg">
-                <div>
-                    <p class="fw-bold">Recommended Players</p>
-                    {% for Players in playerdata %}
-
-                    <a class="text-decoration-none text-dark" href="{% url 'player-home' Players.id %}">
-                        <div class="d-flex">
-                            <div class="rec-img-club">
-                                <img class="w-100 rounded-circle" src="{{Players.img.url}}" alt="">
-                            </div>
-                            <p class="ms-2">{{Players.first_name}} {{Players.last_name}}{% if Players.scouted_by != ''%}
-                                <i class="bi bi-patch-check-fill text-primary"></i>
-                                {% endif %}
-                            </p>
-                            </p>
-                        </div>
-                    </a>
-                    {% endfor %}
-
-
-                </div>
-            </div>
-            <div class="m-3 p-5  player-recomendation rounded bg-white shadow-lg">
-                <div>
-                    <p class="fw-bold">Recommended Scouts</p>
-                    {% for scouts in scout %}
-                    {% if scouts.is_staff == 0 %}
-                    <a class="text-decoration-none text-dark" href="{% url 'scout-home' scouts.id %}">
-                        <div class="d-flex">
-                            <div class="rec-img-club">
-                                <img class="w-100 rounded-circle" src="{{scouts.img.url}}" alt="">
-                            </div>
-                            <p class="ms-2">{{scouts.first_name}} {{scouts.last_name}}<i
-                                    class="bi bi-patch-check-fill text-primary"></i></p>
-                        </div>
-                    </a>
-                    {% endif %}
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-        {% endif %}
+        
     </div>
 </body>
 
