--- a/us/template/ScoutHome.html
+++ b/us/template/ScoutHome.html
@@ -43,6 +43,10 @@
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'player-club' %}">Clubs</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
+                        </li>
 
                     </ul>
                 </div>
@@ -83,6 +87,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'ClubPlayer' %}">Players</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
                     </ul>
                 </div>
