--- a/us/template/ClubHome.html
+++ b/us/template/ClubHome.html
@@ -46,6 +46,10 @@
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'ScoutPlayer' %}">Players</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
@@ -86,6 +90,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'player-club' %}">Clubs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
 
                     </ul>
