--- a/us/template/player-home.html
+++ b/us/template/player-home.html
@@ -191,7 +191,21 @@
             </div>
         </div>
         <div class="col-lg-5 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
-
+            <div class="d-flex justify-content-evenly mb-3">
+                <div class="text-center">
+                    <p class="fs-4 fw-bold">{{post_count}}</p>
+                    <p class="fs-5">Posts</p>
+                </div>
+                <div class="text-center">
+                    <p class="fs-4 fw-bold">{{followers}}</p>
+                    <p class="fs-5">Followers</p>
+                </div>
+                <div class="text-center">
+                    <p class="fs-4 fw-bold">{{following}}</p>
+                    <p class="fs-5">Following</p>
+                </div>
+            </div>
+            <p class="fw-bold fs-5 text-secondary">Posts</p>
             {% for j in feeds %}
             <div class="mt-4 border-top pt-4">
                 <div class="d-flex">
